--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "eslint": "^4.1.1",
-    "eslint-plugin-react": "^7.1.0"
+    "eslint": "^4.4.0",
+    "eslint-plugin-react": "^7.1.0",
+    "inquirer": "^3.2.1",
+    "mute-stream": "0.0.7"
   }
 }
