--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "eslint": "^4.4.0",
     "eslint-plugin-react": "^7.1.0",
+    "espree": "^3.5.0",
     "inquirer": "^3.2.1",
     "mute-stream": "0.0.7"
   }
